[tool.poetry]
name = "argostranslate"
version = "1.9.4"
description = "Open-source neural machine translation library based on OpenNMT's CTranslate2"
authors = ["Argos Open Technologies, LLC <admin@argosopentech.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.argosopentech.com"
repository = "https://github.com/argosopentech/argos-translate"
documentation = "https://argos-translate.readthedocs.io/en/latest/"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.dependencies]
python = "^3.5"
ctranslate2 = "^4.0"
sentencepiece = "0.1.99"
stanza = "1.1.1"
packaging = "*"
sacremoses = "0.0.53"

[tool.poetry.scripts]
argos-translate = "argostranslate.cli:main"
argospm = "argostranslate.argospm:main"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"
